code/infrastructure/base/app.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: app
  name: app
spec:
  ports:
    - name: http
      port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    run: app
    app: app
  sessionAffinity: None
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  labels:
    run: app
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      run: app
      app: app
  template:
    metadata:
      labels:
        run: app
        app: app
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: app
          # NOTE : you can update to the latest release
          image: ${APP_IMAGE}
          command: [ "node" ]
          args: [ "chatty/server.js" ]
          ports:
            - containerPort: 8000
              name: http
          # NOTE: you can increase these resources
          resources:
            requests:
              memory: 1Mi
              cpu: 0.1
            limits:
              memory: 1000Mi
              cpu: 2
